// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UI/Common/Content - Card should have .selected class when the selectedCardIdentifier matches the cards identifier 1`] = `
<pf-card
  card={[Function Object]}
  cardIdentifier={[Function Function]}
  cardIsDisabled={[Function Function]}
  selected={[Function EventEmitter]}
  selectedCardIdentifier={[Function Number]}
>
  <div
    class="card selected"
    ng-reflect-klass="card"
    ng-reflect-ng-class="[object Object]"
  >
    <div
      class="card-body"
    >
      
    </div>
  </div>
</pf-card>
`;

exports[`UI/Common/Content - Card should have the .disabled class when the card matches the cardIsDisabled expression 1`] = `
<pf-card
  card={[Function Object]}
  cardIdentifier={[Function Function]}
  cardIsDisabled={[Function Function]}
  selected={[Function EventEmitter]}
  selectedCardIdentifier="0"
>
  <div
    class="card disabled"
    ng-reflect-klass="card"
    ng-reflect-ng-class="[object Object]"
  >
    <div
      class="card-body"
    >
      
    </div>
  </div>
</pf-card>
`;

exports[`UI/Common/Content - Card should show cardBodyTemplate template, with context, inside the card div 1`] = `
<ng-component
  cardSelector={[Function Function]}
  disabledExpression={[Function Function]}
>
  <pf-card
    ng-reflect-card="[object Object]"
    ng-reflect-card-body-template="[object Object]"
    ng-reflect-card-identifier="function (card) {
              "
    ng-reflect-card-is-disabled="function (card) {
              "
    ng-reflect-selected-card-identifier="1"
  >
    <div
      class="card selected"
      ng-reflect-klass="card"
      ng-reflect-ng-class="[object Object]"
    >
      <div
        class="card-body"
      >
        
         Mock Card Id - 1 
      </div>
    </div>
  </pf-card>
</ng-component>
`;
